fix: Undefined deviceId and overlapping floating button

--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     font-size: 16px;
-    margin-bottom: 100px;
     background-color: #fbfbfbf5;
     --primary-color: #1BB55C;
 }
@@ -23,6 +22,8 @@ button {
     width: 100%;
 
     &.page {
+        margin-bottom: 160px;
+
         h1 {
             margin-bottom: 25px;
         }
